--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
     position: relative;
 }
 .main{
-    background: url(img/face.png);
     width: 100%;
     height: 185px;
     overflow: visible;
@@ -23,7 +22,22 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: transparent;
-
+}
+.faceMove{
+    top: 143px !important;
+    transition: 1s;
+}
+.face{
+    position: absolute;
+    top: 163px;
+    left: 50%;
+    transform: translate(-50% );
+    pointer-events: none;
+}
+.mouth{
+    position: absolute; 
+    top: 286px;
+    left: 111px;
 }
 @keyframes mainAnim {
     from{
@@ -34,11 +48,9 @@
     }
 }
 .smile{
-    background: url(img/smile.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    transform: translateY(-20px);
-    transition-duration:1s;
+    position: absolute; 
+    top: 266px;
+    left: 111px;
 }
 .smileMove{
 }
@@ -46,11 +58,9 @@
     padding-top: 30px;
 }
 .glass{
-    position: absolute;
+    margin-top: 35px;
     width: 245px;
     height: 95px;
-    top: 190px;
-    left: 30px;
     animation: animeGlass 2s infinite, mainAnim 2s;
     padding: 10px;
     display: block;
@@ -70,7 +80,6 @@
 }
 .lasticShow{
     opacity: 1;
-    transition-duration: 0.1s;
 }
 .lasticOff{
     opacity: 0;
